added head info and a navbar in the body, and created js and css file

--- a/index.html
+++ b/index.html
@@ -1,8 +1,32 @@
 <html>
     <head>
+        <!-- Meta tags -->
+        <meta charset="UTF-8">
+        <meta name="description" content="Practice project for code up">
+        <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+        <meta name="author" content="Josh Markaksy">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Title -->
+        <title>Website Practice</title>
+
+        <!-- CSS links -->
+        <link rel="stylesheet" type="text/css" href="css/index.css">
 
     </head>
     <body>
+
+        <div id="navbar">
+            <ul>
+                <li id="navtitle"></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+
+        <script src="js/index.js"></script>
 
     </body>
 </html>
